Prefab Updates + OOB Area
Added an Out of Bounds area to the map - linked it to the prefab.
Modified prefab transforms to be 0,0,0.

--- a/PBE - Progres Check Project/Assembly-CSharp.csproj
+++ b/PBE - Progres Check Project/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\PivotCamera.cs" />
     <Compile Include="Assets\Scripts\FollowCamera.cs" />
+    <Compile Include="Assets\Scripts\OutOfBounds.cs" />
     <Compile Include="Assets\Scripts\PlayerControl.cs" />
     <Compile Include="Assets\Scripts\NonHostileController.cs" />
     <Compile Include="Assets\Scripts\SpawnPoints.cs" />
