--- a/PBE - Progres Check Project/Assembly-CSharp.csproj
+++ b/PBE - Progres Check Project/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Coin.cs" />
     <Compile Include="Assets\Scripts\PivotCamera.cs" />
+    <Compile Include="Assets\Scripts\PlayerInventory.cs" />
     <Compile Include="Assets\Scripts\FollowCamera.cs" />
     <Compile Include="Assets\Scripts\PlayerControl.cs" />
     <Compile Include="Assets\Scripts\NonHostileController.cs" />
