--- a/PBE - Progres Check Project/Assembly-CSharp.csproj
+++ b/PBE - Progres Check Project/Assembly-CSharp.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <LangVersion>9.0</LangVersion>
@@ -66,6 +66,8 @@
     <Compile Include="Assets\Scripts\NonHostileController.cs" />
     <Compile Include="Assets\Scripts\SpawnPoints.cs" />
     <Compile Include="Assets\Scripts\EnemyFollow.cs" />
+    <Compile Include="Assets\Scripts\EnemyHealthBar.cs" />
+
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Assets\Shader Materials\Toon Shader.shader" />
